project/ws/.metadata/.plugins/org.eclipse.cdt.ui/nucleo-H753ZI_TemplateAutoware_Serial.build.log
15:00:40 **** Incremental Build of configuration Debug for project nucleo-H753ZI_TemplateAutoware_Serial ****
make -j48 all 
docker pull microros/micro_ros_static_library_builder:humble && docker run --rm -v /home/toffanetto/subjects/im420x/project/ws/nucleo-H753ZI_TemplateAutoware_Serial:/project --env MICROROS_LIBRARY_FOLDER=microautoware_vehicle_inferface_stm32/microros_static_library_ide microros/micro_ros_static_library_builder:humble
humble: Pulling from microros/micro_ros_static_library_builder
Digest: sha256:83ab4e8ce95b2a62feb5dd270ad4460218d2d026a455ea32a5873cf629aa1e99
Status: Image is up to date for microros/micro_ros_static_library_builder:humble
docker.io/microros/micro_ros_static_library_builder:humble
dos2unix: converting file /project/microautoware_vehicle_inferface_stm32/microros_static_library_ide/library_generation/library_generation.sh to Unix format...
micro-ROS library found. Skipping...
Delete microautoware_vehicle_inferface_stm32/microros_static_library_ide/libmicroautoware/ for rebuild.
 
arm-none-eabi-gcc "../Core/Src/taksControle.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H753xx -c -I../Core/Inc -I../microautoware_vehicle_inferface_stm32/microros_static_library_ide/libmicroautoware/include -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/taksControle.d" -MT"Core/Src/taksControle.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/taksControle.o"
../Core/Src/taksControle.c: In function 'StartTaskControle':
../Core/Src/taksControle.c:49:9: error: redeclaration of 'fTrottle' with no linkage
   49 |   float fTrottle;
      |         ^~~~~~~~
../Core/Src/taksControle.c:48:9: note: previous declaration of 'fTrottle' with type 'float'
   48 |   float fTrottle;
      |         ^~~~~~~~
../Core/Src/taksControle.c:61:9: warning: implicit declaration of function 'osDelay' [-Wimplicit-function-declaration]
   61 |         osDelay(20);
      |         ^~~~~~~
../Core/Src/taksControle.c:50:9: warning: unused variable 'fSteeringAngle' [-Wunused-variable]
   50 |   float fSteeringAngle;
      |         ^~~~~~~~~~~~~~
../Core/Src/taksControle.c:49:9: warning: unused variable 'fTrottle' [-Wunused-variable]
   49 |   float fTrottle;
      |         ^~~~~~~~
../Core/Src/taksControle.c:47:9: warning: variable 'fJoyYAxis' set but not used [-Wunused-but-set-variable]
   47 |   float fJoyYAxis;
      |         ^~~~~~~~~
../Core/Src/taksControle.c:46:9: warning: variable 'fJoyXAxis' set but not used [-Wunused-but-set-variable]
   46 |   float fJoyXAxis;
      |         ^~~~~~~~~
../Core/Src/taksControle.c:37:17: warning: variable 'ucControlMode' set but not used [-Wunused-but-set-variable]
   37 |   unsigned char ucControlMode;
      |                 ^~~~~~~~~~~~~
make[1]: *** [Core/Src/subdir.mk:79: Core/Src/taksControle.o] Error 1
make: *** [makefile:62: all] Error 2
"make -j48 all" terminated with exit code 2. Build might be incomplete.

15:00:43 Build Failed. 3 errors, 6 warnings. (took 3s.237ms)

